--- a/python/bindings/CMakeLists.txt
+++ b/python/bindings/CMakeLists.txt
@@ -84,9 +84,9 @@ if(USE_PYBIND11_PYTHON_BINDINGS)
       add_library(pyANN_int SHARED pyann.cpp bindings.cpp)
       include_directories(${ANN_INCLUDE_DIR})
       # stdc++ has to be included before opengl libraries due to some ATI bug (http://wiki.fifengine.de/  Segfault_in_cxa_allocate_exception#Workaround)
-      target_link_libraries(pyANN_int PUBLIC ${OPENRAVEPY_LINKED_LIBRARIES} ANN PRIVATE boost_assertion_failed)
+      target_link_libraries(pyANN_int PUBLIC ${OPENRAVEPY_LINKED_LIBRARIES} libopenrave libopenrave-core ANN PRIVATE boost_assertion_failed)
       set_target_properties(pyANN_int PROPERTIES PREFIX "" COMPILE_FLAGS "${ANN_CFLAGS} ${OPENRAVEPY_COMPILE_FLAGS}")
-      add_dependencies(pyANN_int ANN)
+      add_dependencies(pyANN_int ANN libopenrave libopenrave-core)
       if( WIN32 )
         set_target_properties(pyANN_int PROPERTIES SUFFIX ".pyd")
         if( MSVC )
@@ -104,9 +104,9 @@ if(USE_PYBIND11_PYTHON_BINDINGS)
     if( CONVEXDECOMPOSITION_FOUND )
       add_library(convexdecompositionpy SHARED convexdecompositionpy.cpp bindings.cpp)
       include_directories(${CONVEXDECOMPOSITION_INCLUDE_DIR})
-      target_link_libraries(convexdecompositionpy PUBLIC ${OPENRAVEPY_LINKED_LIBRARIES} convexdecomposition PRIVATE boost_assertion_failed)
+      target_link_libraries(convexdecompositionpy PUBLIC ${OPENRAVEPY_LINKED_LIBRARIES} convexdecomposition libopenrave libopenrave-core PRIVATE boost_assertion_failed)
       set_target_properties(convexdecompositionpy PROPERTIES PREFIX "" COMPILE_FLAGS "${CONVEXDECOMPOSITION_CFLAGS} ${OPENRAVEPY_COMPILE_FLAGS}" )
-      add_dependencies(convexdecompositionpy convexdecomposition)
+      add_dependencies(convexdecompositionpy convexdecomposition libopenrave libopenrave-core)
       if( WIN32 )
         set_target_properties(convexdecompositionpy PROPERTIES SUFFIX ".pyd")
         if( MSVC )
@@ -154,7 +154,7 @@ elseif( Boost_PYTHON_FOUND AND Boost_THREAD_FOUND )
     include_directories(${CMAKE_CURRENT_BINARY_DIR}/include ${CMAKE_CURRENT_SOURCE_DIR}/include ${PYTHON_INCLUDE_DIRS} ${OPENRAVE_INCLUDE_LOCAL_DIRS} ${OPENRAVE_CORE_INCLUDE_LOCAL_DIRS})
 
     # libraries to link
-    set(OPENRAVEPY_LINKED_LIBRARIES "${STDC_LIBRARY} ${PYTHON_LIBRARIES} ${Boost_PYTHON_LIBRARY} ${Boost_THREAD_LIBRARY}")
+	set(OPENRAVEPY_LINKED_LIBRARIES "${STDC_LIBRARY} ${PYTHON_LIBRARIES} ${Boost_PYTHON_LIBRARY} ${Boost_THREAD_LIBRARY} ${Boost_SYSTEM_LIBRARY}")
     if( CLOCK_GETTIME_FOUND )
       set(OPENRAVEPY_LINKED_LIBRARIES ${OPENRAVEPY_LINKED_LIBRARIES} rt)
     endif()
@@ -191,9 +191,9 @@ elseif( Boost_PYTHON_FOUND AND Boost_THREAD_FOUND )
     if( ANN_FOUND )
       add_library(pyANN_int SHARED pyann.cpp bindings.cpp)
       include_directories(${ANN_INCLUDE_DIR})
-      target_link_libraries(pyANN_int PUBLIC ${OPENRAVEPY_LINKED_LIBRARIES} libopenrave ANN PRIVATE boost_assertion_failed)
+      target_link_libraries(pyANN_int PUBLIC ${OPENRAVEPY_LINKED_LIBRARIES} libopenrave libopenrave-core ANN PRIVATE boost_assertion_failed)
       set_target_properties(pyANN_int PROPERTIES PREFIX "" COMPILE_FLAGS "${ANN_CFLAGS}" )
-      add_dependencies(pyANN_int ANN)
+      add_dependencies(pyANN_int ANN libopenrave libopenrave-core)
       if( WIN32 )
         set_target_properties(pyANN_int PROPERTIES SUFFIX ".pyd")
         if( MSVC )
@@ -210,9 +210,9 @@ elseif( Boost_PYTHON_FOUND AND Boost_THREAD_FOUND )
     if( CONVEXDECOMPOSITION_FOUND )
       add_library(convexdecompositionpy SHARED convexdecompositionpy.cpp bindings.cpp)
       include_directories(${CONVEXDECOMPOSITION_INCLUDE_DIR})
-      target_link_libraries(convexdecompositionpy PUBLIC ${OPENRAVEPY_LINKED_LIBRARIES} libopenrave convexdecomposition PRIVATE boost_assertion_failed)
+      target_link_libraries(convexdecompositionpy PUBLIC ${OPENRAVEPY_LINKED_LIBRARIES} libopenrave libopenrave-core convexdecomposition PRIVATE boost_assertion_failed)
       set_target_properties(convexdecompositionpy PROPERTIES PREFIX "" COMPILE_FLAGS "${CONVEXDECOMPOSITION_CFLAGS}" )
-      add_dependencies(convexdecompositionpy convexdecomposition)
+      add_dependencies(convexdecompositionpy convexdecomposition libopenrave libopenrave-core)
       if( WIN32 )
         set_target_properties(convexdecompositionpy PROPERTIES SUFFIX ".pyd")
         if( MSVC )
