--- a/plugins/bulletrave/CMakeLists.txt
+++ b/plugins/bulletrave/CMakeLists.txt
@@ -8,12 +8,12 @@ if( OPT_BULLET )
     if( "${bullet_VERSION}" VERSION_GREATER "2.82" )
       message(STATUS "unsupported bullet version ${bullet_VERSION}")
     else()
-      include_directories(${bullet_INCLUDE_DIRS})
+      include_directories(/usr/local/${bullet_INCLUDE_DIRS})
       link_directories(${OPENRAVE_LINK_DIRS} ${bullet_LIBRARY_DIRS})
 
       add_library(bulletrave SHARED bulletrave.cpp bulletcollision.h bulletphysics.h  bulletspace.h  plugindefs.h)
 
-      #message(STATUS "Bullet found ${bullet_INCLUDE_DIRS}, libs: ${bullet_LIBRARIES}, cflags=${bullet_CFLAGS_OTHER}, lflags=${bullet_LDFLAGS_OTHER}, building bulletrave plugin")
+      message(STATUS "Bullet found ${bullet_INCLUDE_DIRS}, libs: ${bullet_LIBRARIES}, cflags=${bullet_CFLAGS_OTHER}, lflags=${bullet_LDFLAGS_OTHER}, building bulletrave plugin")
 
       target_link_libraries(bulletrave libopenrave ${bullet_LIBRARIES})
       target_link_libraries(bulletrave PRIVATE boost_assertion_failed)
